[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grandslam"
version = "0.2.0"
authors = [
  { name="JJTech0130", email="jjtech@jjtech.dev" },
  { name="nythepegasus", email="me@nythepegas.us" },
]
description = "A package for communicating with Apple's Grand Slam Authentication."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent",
]
dependencies = [
  "cryptography",
  "srp",
  "pbkdf2",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/nythepegasus/grandslam"
"Bug Tracker" = "https://github.com/nythepegasus/grandslam/issues"

[project.scripts]
grandslam = "grandslam.auth:main"
