[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyDunk"
version = "0.0.1"
authors = [
  { name="nythepegasus", email="me@nythepegas.us" },
  { name="JJTech0130", email="jjtech@jjtech.dev" },
]
description = "A package for communicating with Apple's Grand Slam Authentication and relating APIs."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent",
]
dependencies = [
  "cryptography",
  "srp",
  "pbkdf2",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/nythepegasus/PyDunk"
"Bug Tracker" = "https://github.com/nythepegasus/PyDunk/issues"

[project.scripts]
grandslam = "grandslam:main"
